--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 TFM DevOps
+  p.lead Automatización del despliegue de una aplicación NodeJS en un clúster Amazon EKS.
   hr
   .row
     .col-md-6
