cambio mensaje de cabecera

--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 TFM DevOps
-  p.lead Automatización del despliegue de una aplicación NodeJS en un clúster Amazon EKS
+  p.lead Automatización del despliegue de una aplicación NodeJS en un clúster Amazon EKS.
   hr
   .row
     .col-md-6
